# ble_wasm_example

./: Cargo.toml  README.md  index.html
pkg/: package.json  web_bluetooth_rust.d.ts  web_bluetooth_rust.js  web_bluetooth_rust_bg.wasm  web_bluetooth_rust_bg.wasm.d.ts
src/: lib.rs
