[package]
name = "web_bluetooth_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
  "Window", "Navigator", "Bluetooth", "RequestDeviceOptions", 
  "BluetoothDevice", "console"
] }

[profile.release]
opt-level = "s"
